--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,7 +1,9 @@
-fastapi
-uvicorn
-sqlalchemy
-psycopg2-binary
-requests
-html5lib
-python-dotenv
+# backend/requirements.txt
+fastapi==0.95.1
+uvicorn==0.18.3
+pydantic==1.10.11
+sqlalchemy==1.4.49
+psycopg2-binary==2.9.10
+requests==2.32.5
+html5lib==1.1
+python-dotenv==1.1.1
